@@ -492,6 +492,25 @@ fi
 
 AC_SUBST([FREETYPE_LIBS])
 
+AC_LANG(C++)
+AC_MSG_CHECKING([for libzipios++])
+OLD_LIBS="$LIBS"
+LIBS="$LIBS -lzipios"
+LIBZIPIOS=
+AC_LINK_IFELSE([AC_LANG_SOURCE([
+#include <zipios++/dircoll.h>
+int main(int argc, char **argv)
+{
+	zipios::DirectoryCollection z("src");
+}
+	])],
+	[AC_MSG_RESULT(yes)
+	LIBZIPIOS=-lzipios
+	AC_DEFINE([USE_ZIPIOS],[1],[Make use of the zipios++ library to read data in zip files])],
+	[AC_MSG_RESULT(no)
+	AC_MSG_WARN([*** libzipios++ not found - support for ZIP files is disabled])])
+LIBS="$OLD_LIBS"
+AC_SUBST([LIBZIPIOS])
 
 #######################################################################
 # Checks for header files.                                            #
