@@ -17,6 +17,7 @@
 #include "game_config.hpp"
 #include "log.hpp"
 #include "sound.hpp"
+#include "wesconfig.h"
 
 #include "SDL_mixer.h"
 
